--- a/styles/button.scss
+++ b/styles/button.scss
@@ -20,4 +20,11 @@ button {
     color: $white;
     cursor: pointer;
   }
+
+  &.active {
+    background: $black;
+    border-color: $white;
+    color: $white;
+    cursor: pointer;
+  }
 }
